Add Radix UI label component and update Tailwind configuration; extend cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["aadhar", "BLOCKAID", "heroui"]
+  "cSpell.words": [
+    "aadhar",
+    "BLOCKAID",
+    "fontname",
+    "heroui",
+    "Madimi",
+    "Navbarx"
+  ]
 }
