--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/button": "^2.2.13",
     "@material-tailwind/react": "^2.1.10",
     "@next/font": "^14.2.15",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
