--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/button": "^2.2.13",
     "@material-tailwind/react": "^2.1.10",
@@ -18,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
@@ -29,7 +31,9 @@
     "to-regex-range": "^5.0.1"
   },
   "devDependencies": {
+    "@types/react": "19.0.10",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
